@@ -1,70 +1,63 @@
 package ru.ylab.application.service;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mapstruct.factory.Mappers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
+import ru.ylab.adapters.in.web.dto.UtilityMeterDto;
 import ru.ylab.adapters.out.persistence.entity.UtilityMeterEntity;
-import ru.ylab.application.out.AuditRepository;
+import ru.ylab.application.mapper.UtilityMeterMapper;
 import ru.ylab.application.out.MeterRepository;
 import ru.ylab.domain.model.UtilityMeter;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
+
+@ExtendWith(MockitoExtension.class)
 class GetAllUtilityMeterImplTest {
+
+    private static List<UtilityMeterDto> utilityMetersDto;
+
+    private static List<UtilityMeter> utilityMeters;
+
+    private static List<UtilityMeterEntity> utilityMeterEntities;
 
     @Mock
     private MeterRepository meterRepository;
 
     @Mock
-    private AuditRepository auditRepository;
+    private UtilityMeterMapper utilityMeterMapper;
 
     @InjectMocks
     private GetAllUtilityMeterImpl getAllUtilityMeter;
 
-    private List<UtilityMeterEntity> entityList;
-
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-        entityList = Arrays.asList(
-                UtilityMeterEntity.builder().userId(1L).build(),
-                UtilityMeterEntity.builder().userId(1L).build(),
-                UtilityMeterEntity.builder().userId(1L).build(),
-                UtilityMeterEntity.builder().userId(1L).build(),
-                UtilityMeterEntity.builder().userId(1L).build(),
-                UtilityMeterEntity.builder().userId(1L).build()
-        );
+    @BeforeAll
+    static void setUp() {
+        utilityMeterEntities = List.of(UtilityMeterEntity.builder().build());
+        UtilityMeterMapper mapper = Mappers.getMapper(UtilityMeterMapper.class);
+        utilityMeters = mapper.toListDomain(utilityMeterEntities);
+        utilityMetersDto = mapper.toListDto(utilityMeters);
     }
 
     @Test
-    @DisplayName("Тест выполнения с ролью ADMIN")
-    void testExecuteWithAdminRole() {
-        when(meterRepository.findAll()).thenReturn(entityList);
+    void test() {
+        when(meterRepository.findAll()).thenReturn(utilityMeterEntities);
+        when(utilityMeterMapper.toListDomain(anyList())).thenReturn(utilityMeters);
+        when(utilityMeterMapper.toListDto(anyList())).thenReturn(utilityMetersDto);
 
-        List<UtilityMeter> result = getAllUtilityMeter.execute();
+        List<UtilityMeterDto> utilityMetersDto = getAllUtilityMeter.execute();
 
-        verify(auditRepository, times(1)).save(any());
-        assertThat(entityList).hasSize(result.size());
-    }
-
-    @Test
-    @DisplayName("Тест выполнения с ролью USER")
-    void testExecuteWithUserRole() {
-        Long userId = 1L;
-        when(meterRepository.findAllByUserId(userId)).thenReturn(entityList.subList(0, 3));
-
-        List<UtilityMeter> result = getAllUtilityMeter.execute();
-
-        verify(auditRepository, times(1)).save(any());
-        assertThat(result).hasSize(3);
+        assertThat(utilityMetersDto).hasSize(1);
+        assertThat(utilityMetersDto).isNotNull();
+        verify(meterRepository).findAll();
     }
 
 }
